--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -23,7 +23,7 @@ jobs:
       uses: conda-incubator/setup-miniconda@v2
       with:
         miniconda-version: "latest"
-        environment-file: envs/environment-cpu.yml
+        environment-file: environment.yml
         python-version: "3.10.*"
     - name: Install test dependencies
       run: |
