--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -31,7 +31,10 @@ jobs:
     - name: Lint with flake8
       run: |
         pip install flake8
-        flake8 fff
+        flake8 multirl
+    - name: Start Redis
+      run: |
+        redis-server &> redis.log &
     - name: Test with pytest
       run: |
         pytest --cov=multirl tests
